Time: 0 ms (100.00%), Space: 40.6 MB (18.89%) - LeetHub